--- a/src/Club/UserBundle/Resources/views/User/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/form.html.twig
@@ -1,6 +1,7 @@
   <fieldset>
     <legend>Personal Information</legend>
 
+    <p>{{ form_row(form.language) }}</p>
     <p>{{ form_row(form.profile.first_name) }}</p>
     <p>{{ form_row(form.profile.last_name) }}</p>
     <p>{{ form_row(form.profile.gender) }}</p>
