--- a/src/Club/UserBundle/Resources/views/Group/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Group/index.html.twig
@@ -3,7 +3,10 @@
 {% block header %}<h1>Group</h1>{% endblock %}
 
 {% block body %}
+
 <p class="box"><a href="{{ path('admin_group_new') }}" class="btn-create"><span>Create group</span></a></p>
+
+<h2>Groups</h2>
 
 <table>
   <thead>
